force-app/main/default/src/objects/RelayPowerups__c/RelayPowerups__c.object-meta.xml
<CustomObject>
    <label>Relay Powerup</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relay Powerups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>