force-app/main/default/src/objects/RelayPowerups__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ClientId</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>