force-app/main/default/src/objects/RelayPowerups__c/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CustomerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>