force-app/main/default/src/objects/RelayPowerups__c/fields/DateSubmittedAt__c.field-meta.xml
<CustomField>
    <fullName>DateSubmittedAt__c</fullName>
    <description>The date and time the form was submitted</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Submitted</label>
    <length>30</length>
    <type>Text</type>
</CustomField>