force-app/main/default/src/objects/RelayPowerups__c/fields/EventID__c.field-meta.xml
<CustomField>
    <fullName>EventID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>