force-app/main/default/src/objects/RelayPowerups__c/fields/FormID__c.field-meta.xml
<CustomField>
    <fullName>FormID__c</fullName>
    <description>The ID of the Form where the data was entered by the end user</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Form ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>