force-app/main/default/src/objects/RelayPowerups__c/fields/JourneyID__c.field-meta.xml
<CustomField>
    <fullName>JourneyID__c</fullName>
    <description>The ID of the Relay Experience that contained this PowerUp Form</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Experience ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>