force-app/main/default/src/objects/RelayPowerups__c/fields/MVN_Activity__c.field-meta.xml
<CustomField>
    <fullName>MVN_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MVN_Activity</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Relay Powerups</relationshipLabel>
    <relationshipName>Relay_Powerups</relationshipName>
    <type>Lookup</type>
</CustomField>