force-app/main/default/src/objects/RelayPowerups__c/fields/ProductGroupID__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupID__c</fullName>
    <description>The ID of the Product Group associated with the user identified by the RelayCCID__c field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>