force-app/main/default/src/objects/RelayPowerups__c/fields/RelayCCID__c.field-meta.xml
<CustomField>
    <fullName>RelayCCID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>RelayCCID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>