force-app/main/default/src/objects/RelayPowerups__c/fields/SubmissionAnswerId__c.field-meta.xml
<CustomField>
    <fullName>SubmissionAnswerId__c</fullName>
    <description>The unique identifier for the answered question</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Submission Anwser ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>