force-app/main/default/src/objects/RelayPowerups__c/fields/SubmissionID__c.field-meta.xml
<CustomField>
    <fullName>SubmissionID__c</fullName>
    <description>The specific question identifier of the field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Submission ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>