force-app/main/default/src/objects/RelayPowerups__c/fields/SubmissionType__c.field-meta.xml
<CustomField>
    <fullName>SubmissionType__c</fullName>
    <description>The data type of the submitted field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Submission Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>