force-app/main/default/src/objects/RelayPowerups__c/fields/SubmissionValue__c.field-meta.xml
<CustomField>
    <fullName>SubmissionValue__c</fullName>
    <description>The value provided by the end user</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Submission Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>