force-app/main/default/src/objects/RelayPowerups__c/fields/TriggerNickname__c.field-meta.xml
<CustomField>
    <fullName>TriggerNickname__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trigger Nickname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>