force-app/main/default/src/objects/RelayPowerups__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RelayCCID__c</columns>
    <columns>SubmissionID__c</columns>
    <columns>SubmissionAnswerId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ClientMessageTag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>